# superterrainplus

./: .clang-format  .gitattributes  .gitignore  Biome.ini  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Engine.ini  LICENSE  README.md  SuperTerrain+.sln  SuperTerrain+.vcxproj  SuperTerrain+.vcxproj.filters  SuperTerrainProps_debug64.props  SuperTerrainProps_release64.props  build-sqlite3.bat
GLAD/: .gitignore  CMakeLists.txt
SuperDemo+/: .gitignore  Biome.ini  CMakeLists.txt  Engine.ini  STPMasterRenderer.cpp  STPMasterRenderer.h  STPStart.cpp
SuperDemo+/GLSL/: STPProcedural2DINF.frag  STPProcedural2DINF.geom  STPProcedural2DINF.tesc  STPProcedural2DINF.tese  STPProcedural2DINF.vert  STPsky.vert
SuperDemo+/Helpers/: STPCommandLineOption.cpp  STPCommandLineOption.h  STPIndirectCommands.h  STPStart.cpp  STPTerrainParaLoader.cpp  STPTerrainParaLoader.h  STPTextureStorage.cpp  STPTextureStorage.h
SuperDemo+/Renderer/: STPMasterRenderer.h  STPOffscreenRenderer.h  STPRendererCommander.h  STPSkyRenderer.h
SuperDemo+/Resource/: .gitignore  welcome.txt
SuperDemo+/Script/: STPBiomeSplatRule.tdl  STPCommonGenerator.cu  STPCommonGenerator.cuh  STPMultiHeightGenerator.cu  STPSplatmapGenerator.cu
SuperDemo+/World/: STPProcedural2DINF.cpp  STPProcedural2DINF.h  STPWorldManager.cpp  STPWorldManager.h  STPWorldManager.inl
SuperDemo+/World/Biomes/: STPBiome.cpp  STPBiome.h  STPBiome.hpp  STPBiomeProperty.hpp  STPBiomeRegistry.cpp  STPBiomeRegistry.h  STPBiomeSettings.hpp  STPBiomefieldGenerator.h  (+8 more)
SuperTerrain+/: .gitignore  CMakeLists.txt
SuperTerrain+/Core/: CMakeLists.txt  STPAlgebra.cpp  STPBiomeFactory.cpp  STPChunk.cpp  STPChunkManager.cpp  STPChunkProvider.cpp  STPChunkStorage.cpp  STPDeviceErrorHandler.cpp  STPDeviceRuntimeBinary.cpp  STPDeviceRuntimeProgram.cpp  STPDiversityGeneratorRTC.cpp  STPEngineInitialiser.cpp  STPEnvironment.cpp  STPErosionBrushGenerator.cpp  STPException.cpp  STPFile.cpp  STPFreeSlipGenerator.cpp  STPFreeSlipGenerator.cu  STPFreeSlipManager.cu  STPFreeSlipTextureBuffer.cpp  STPHeightfieldGenerator.cpp  STPHeightfieldGenerator.cu  STPHeightfieldKernel.cu  STPLayer.cpp  STPLayerCache.cpp  STPLayerManager.cpp  STPMemoryPool.cpp  STPNullablePrimitive.cpp  STPPinnedMemoryPool.cpp  STPRainDrop.cu  STPRainDropSetting.cu  STPRainDropSettings.cu  STPRuntimeCompilable.cpp  STPSeedMixer.cpp  STPSmartStream.cpp  STPTextureDatabase.cpp  STPTextureDefinitionLanguage.cpp  STPTextureFactory.cpp  STPTextureSplatBuilder.cpp  STPThreadPool.cpp  (+1 more)
SuperTerrain+/CoreInterface/: CMakeLists.txt  STPCoreDefine.h  STPEngineInitialiser.h
SuperTerrain+/SuperAlgorithm+/: CMakeLists.txt  STPAlgorithmEnvironment.cpp  STPCommandLineParser.cpp  STPINIParser.cpp  STPPermutationGenerator.cpp  STPPermutationGenerator.cu  STPPermutationsGenerator.cu  STPSimplexNoise.cu  STPSimplexNoiseRTC.cu  STPSimplexNoiseSetting.cpp  STPSimplexNoiseSettings.hpp  STPSingleHistogramFilter.cpp  STPTextureDefinitionLanguage.cpp
SuperTerrain+/SuperError+/: CMakeLists.txt  STPDeviceErrorHandler.cpp
SuperTerrain+/SuperRealism+/: CMakeLists.txt  STPAlphaCulling.cpp  STPAmbientOcclusion.cpp  STPAsyncAccelBuilder.cpp  STPBidirectionalScattering.cpp  STPBindlessTexture.cpp  STPBuffer.cpp  STPCamera.cpp  STPCascadedShadowMap.cpp  STPContextStateManager.cpp  STPDebugCallback.cpp  STPDirectionalLight.cpp  STPExtendedScenePipeline.cpp  STPFrameBuffer.cpp  STPGaussianFilter.cpp  STPHeightfieldTerrain.cpp  STPLightShadow.cpp  STPLightSpectrum.cpp  STPMaterialLibrary.cpp  STPOrthographicCamera.cpp  STPPerspectiveCamera.cpp  STPPipelineManager.cpp  STPPlaneGeometry.cpp  STPPostProcess.cpp  STPProgramManager.cpp  STPRandomTextureGenerator.cu  STPRealismEnvironment.cpp  STPRenderBuffer.cpp  STPRendererErrorHandler.cpp  STPRendererInitialiser.cpp  STPSampler.cpp  STPSceneLight.cpp  STPSceneObject.cpp  STPScenePipeline.cpp  STPScreen.cpp  STPShaderIncludeManager.cpp  STPShaderManager.cpp  STPSun.cpp  STPTexture.cpp  STPVertexArray.cpp  (+1 more)
SuperTerrain+/SuperTerrain+/: CMakeLists.txt
SuperTerrain+/SuperTest+/: STPTestFramework.cpp  STPTestFramework.h  STPTestReporter.hpp  STPUtiltyTest.cpp
SuperTerrain+/Template/: STPAlgorithmDefine.h  STPAlgorithmDefine.h.in  STPAlgorithmDeviceInfo.h.in  STPAlgorithmHostInfo.h.in  STPCoreDefine.h  STPCoreDefine.h.in  STPCoreInfo.h.in  STPDefine.h  STPRealismInfo.h.in  STPVersion.h.in
SuperTerrain+/src/: CMakeLists.txt  STPAllLayers.cpp  STPBiome.cpp  STPBiomefieldGenerator.cpp  STPChunkManager.cpp  STPChunkProvider.cpp  STPDeviceErrorHandler.cpp  STPDiversityGeneratorRTC.cpp  STPHeightfieldGenerator.cu  STPLayer.cpp  STPLayerManager.cpp  STPMultiHeightGenerator.cu  STPPermutationsGenerator.cu  STPProcedural2DINF.cpp  STPRainDropSettings.cu  STPSeedMixer.cpp  STPSimplexNoise.cu  STPStart.cpp  STPTerrainParaLoader.cpp  STPTextureStorage.cpp  STPThreadPool.cpp  STPWorldManager.cpp  glad.c
SuperTest+/: .gitignore  CMakeLists.txt  STPAlgorithmTest.cu  STPBiomeTest.cpp  STPChunkTest.cpp  STPPrototypeCachedConvolution.cpp  STPSettingsValidation.cpp  STPTest2DBiome.cpp  STPTest2DChunk.cpp  STPTestAlgebra.cpp  STPTestCmdParser.cpp  STPTestEnvironment.cpp  STPTestFramework.h  STPTestFreeSlip.cpp  STPTestHistogram.cpp  STPTestINI.cpp  STPTestInformation.h  STPTestLexer.cpp  STPTestMain.cpp  STPTestNearestNeighbour.cpp  STPTestPermutation.cpp  STPTestRTC.cpp  STPTestRegLang.cpp  STPTestReporter.hpp  STPTestTDL.cpp  STPTestTexture.cpp  STPTestUtility.cpp  STPUtiltyTest.cpp  SuperTest+.vcxproj  SuperTest+.vcxproj.filters
SuperTest+/Compute/: SobelFilter.cu  SobelFilter.cuh
SuperTest+/Reporter/: STPConsoleReporter.cpp
SuperTest+/Setup/: STPConsoleReporter.cpp
SuperTest+/SuperAlgorithm+/: STPTestCmdParser.cpp  STPTestHistogram.cpp  STPTestINI.cpp  STPTestLexer.cpp  STPTestPermutation.cpp  STPTestRegLang.cpp  STPTestTDL.cpp
SuperTest+/SuperTerrain+/: STPTest2DBiome.cpp  STPTest2DChunk.cpp  STPTestAlgebra.cpp  STPTestNearestNeighbour.cpp  STPTestRTC.cpp  STPTestTexture.cpp  STPTestUtility.cpp
SuperTest+/TestData/: Data.ini  MatrixArithmetic.rtc  MatrixArithmetic.rtch  Terrain.tdl
(+797 files in other folders)
